BRGD-273 Use Monitoring Topic in Brighid Infrastructure

--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -514,14 +514,6 @@ Resources:
       Name: /brighid/discord/account-link/start-url
       Value: !Sub https://discord.com/api/oauth2/authorize?client_id=${ClientId}&redirect_uri=https%3A%2F%2F${DomainName}%2Foauth2%2Fcallback&response_type=code&scope=identify
 
-  MonitoringTopic:
-    Type: AWS::SNS::Topic
-    Properties:
-      DisplayName: Brighid Discord Adapter Monitoring
-      Subscription:
-        - Endpoint: talen.fisher+brighid-discord-adapter@cythral.com
-          Protocol: email
-
   GatewayRestartFilter:
     Type: AWS::Logs::MetricFilter
     Properties:
@@ -546,9 +538,9 @@ Resources:
       Unit: Count
       Statistic: Sum
       AlarmActions:
-        - !Ref MonitoringTopic
+        - !ImportValue brighid-infrastructure:MonitoringTopic
       OKActions:
-        - !Ref MonitoringTopic
+        - !ImportValue brighid-infrastructure:MonitoringTopic
 
   ErrorCountFilter:
     Type: AWS::Logs::MetricFilter
@@ -574,6 +566,6 @@ Resources:
       Unit: Count
       Statistic: Sum
       AlarmActions:
-        - !Ref MonitoringTopic
+        - !ImportValue brighid-infrastructure:MonitoringTopic
       OKActions:
-        - !Ref MonitoringTopic
+        - !ImportValue brighid-infrastructure:MonitoringTopic
