BRGD-274 Alarm Discord Webhook Handler

--- a/after.brighid-discord-adapter.sln.targets
+++ b/after.brighid-discord-adapter.sln.targets
@@ -1,5 +1,5 @@
 <Project>
-    <Target Name="RestoreTools" AfterTargets="Restore">
+    <Target Name="RestoreTools" AfterTargets="Restore" Condition="'$(DesignTimeBuild)' == ''">
         <Exec Command="dotnet tool restore" ConsoleToMsBuild="true" />
     </Target>
 
