--- a/cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj
+++ b/cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj
@@ -32,6 +32,7 @@
         <ProjectReference Include="../../src/Adapter/Adapter.csproj" ReferenceOutputAssembly="false" Targets="Publish" />
         <ProjectReference Include="../../src/ResponseHandler/ResponseHandler.csproj" Targets="Publish" />
         <ProjectReference Include="../../src/CacheExpirer/CacheExpirer.csproj" Targets="Publish" />
+        <ProjectReference Include="../../src/AlarmNotifier/AlarmNotifier.csproj" Targets="Publish" />
         <ProjectReference Include="../../tests/Tests.csproj" />
         <ProjectReference Include="../Cicd.Utils/Cicd.Utils.csproj" />
     </ItemGroup>
