--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,8 +7,7 @@ on:
     tags:
       - "*"
   workflow_dispatch:
-  pull_request:
-    types: [synchronize]
+  pull_request_target:
   schedule:
     - cron: "0 0 * * *"
 
