--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,7 +7,7 @@ on:
     tags:
       - "*"
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types: [synchronize]
   schedule:
     - cron: "0 0 * * *"
