--- a/cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj
+++ b/cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>
+        <SuppressTrimAnalysisWarnings>true</SuppressTrimAnalysisWarnings>
     </PropertyGroup>
 
     <ItemGroup>
