--- a/cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj
+++ b/cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
+        <SuppressTrimAnalysisWarnings>true</SuppressTrimAnalysisWarnings>
     </PropertyGroup>
 
     <ItemGroup>
