--- a/src/CacheExpirer/CacheExpirer.csproj
+++ b/src/CacheExpirer/CacheExpirer.csproj
@@ -6,6 +6,7 @@
         <SelfContained>true</SelfContained>
         <PublishReadyToRun>true</PublishReadyToRun>
         <NoWarn>SA1400;SA1600;SA1205;SA1204;SA1601;SA1201;SA1210;SA1518;SA1633;SA1208;CS1591</NoWarn>
+        <TrimMode>copyused</TrimMode>
     </PropertyGroup>
 
     <ItemGroup>
