--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,7 +8,7 @@ on:
       - "*"
   workflow_dispatch:
   pull_request:
-    types: [synchronize]
+    types: [opened, synchronize]
   schedule:
     - cron: "0 0 * * *"
 
